welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	val X= getMondeHauteur()
	var T = new Array[Color](X);
	getCouleurSol()
	for( i<-0 to T.length-1){
		avance();
		T(x)=getCouleurSol()
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()	
		CouleurBrosse()==T(x)
		baisseBrosse()
	
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()	
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()	
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()	
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()	
	}
	
	
}
